feat: add citations for datasets

--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -70,3 +70,9 @@ Domain specific training data includes the artifacts and, ideally, also a gold s
 Software architecture documentation to software architecture models for BigBlueButton, MediaStore, Teammates, and Teastore are publicly available by \citewithauthor{fuchss2022ArDoCoBenchmark} GitHub.
 
 For the domain of requirements to requirements, which my work will also focus on, a compilation of training data can be found in the replication package~\cite{hey2025ReplicationPackage} for recent work of \citeauthor{hey2025RequirementsTraceability}.
+
+CM1-Nasa \cite{hayes2006AdvancingCandidatea}
+Dronology \cite{cleland-huang2018DronologyIncubator}
+GANNT \cite{holbrook2009AutomatingRequirements}
+Modis \cite{hayes2003ImprovingRequirements}
+WARC \cite{kong2012ProcessImprovement}
