--- a/thesis.bib
+++ b/thesis.bib
@@ -98,6 +98,23 @@
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
 }
 
+@inproceedings{cleland-huang2018DronologyIncubator,
+  title = {Dronology: An Incubator for Cyber-Physical Systems Research},
+  shorttitle = {Dronology},
+  booktitle = {Proceedings of the 40th {{International Conference}} on {{Software Engineering}}: {{New Ideas}} and {{Emerging Results}}},
+  author = {Cleland-Huang, Jane and Vierhauser, Michael and Bayley, Sean},
+  date = {2018-05-27},
+  pages = {109--112},
+  publisher = {ACM},
+  location = {Gothenburg Sweden},
+  doi = {10.1145/3183399.3183408},
+  url = {https://dl.acm.org/doi/10.1145/3183399.3183408},
+  urldate = {2025-10-14},
+  eventtitle = {{{ICSE}} '18: 40th {{International Conference}} on {{Software Engineering}}},
+  isbn = {978-1-4503-5662-6},
+  langid = {english}
+}
+
 @online{deepseek-ai2025DeepSeekR1Incentivizing,
   title = {{{DeepSeek-R1}}: {{Incentivizing Reasoning Capability}} in {{LLMs}} via {{Reinforcement Learning}}},
   shorttitle = {{{DeepSeek-R1}}},
@@ -128,6 +145,12 @@
   isbn = {978-1-4471-2239-5},
   langid = {english},
   keywords = {Candidate Link,Information Retrieval,Software Artifact,Traceability Link,Traceability Recovery}
+}
+
+@online{DronologyProceedings,
+  title = {Dronology | {{Proceedings}} of the 40th {{International Conference}} on {{Software Engineering}}: {{New Ideas}} and {{Emerging Results}}},
+  url = {https://dl.acm.org/doi/10.1145/3183399.3183408},
+  urldate = {2025-10-14}
 }
 
 @online{ewald2024RetrievalAugmentedLarge,
@@ -207,7 +230,38 @@
   langid = {ngerman}
 }
 
-@article{hayes2006AdvancingCandidate,
+@incollection{guo2025NaturalLanguage,
+  title = {Natural {{Language Processing}} for {{Requirements Traceability}}},
+  booktitle = {Handbook on {{Natural Language Processing}} for {{Requirements Engineering}}},
+  author = {Guo, Jin L. C. and Steghöfer, Jan-Philipp and Vogelsang, Andreas and Cleland-Huang, Jane},
+  editor = {Ferrari, Alessio and Ginde, Gouri},
+  date = {2025},
+  pages = {89--116},
+  publisher = {Springer Nature Switzerland},
+  location = {Cham},
+  doi = {10.1007/978-3-031-73143-3_4},
+  url = {https://doi.org/10.1007/978-3-031-73143-3_4},
+  urldate = {2025-10-14},
+  isbn = {978-3-031-73143-3},
+  langid = {english},
+  keywords = {Guidelines,Natural language processing,NLP,Requirements engineering,Requirements traceability,Trace link maintenance,Trace link recovery}
+}
+
+@inproceedings{hayes2003ImprovingRequirements,
+  title = {Improving Requirements Tracing via Information Retrieval},
+  booktitle = {Proceedings. 11th {{IEEE International Requirements Engineering Conference}}, 2003.},
+  author = {Hayes, J.H. and Dekhtyar, A. and Osborne, J.},
+  date = {2003-09},
+  pages = {138--147},
+  issn = {1090-705X},
+  doi = {10.1109/ICRE.2003.1232745},
+  url = {https://ieeexplore.ieee.org/abstract/document/1232745},
+  urldate = {2025-10-14},
+  eventtitle = {. 11th {{IEEE International Requirements Engineering Conference}}, 2003.},
+  keywords = {Algorithm design and analysis,Capability maturity model,Computer aided software engineering,Computer science,Horses,Information retrieval,Performance analysis,Signal analysis,Software tools,Sparks}
+}
+
+@article{hayes2006AdvancingCandidatea,
   title = {Advancing Candidate Link Generation for Requirements Tracing: The Study of Methods},
   shorttitle = {Advancing Candidate Link Generation for Requirements Tracing},
   author = {Hayes, J.H. and Dekhtyar, A. and Sundaram, S.K.},
@@ -218,8 +272,8 @@
   pages = {4--19},
   issn = {1939-3520},
   doi = {10.1109/TSE.2006.3},
-  url = {https://ieeexplore.ieee.org/abstract/document/1583599},
-  urldate = {2025-05-26},
+  url = {https://ieeexplore.ieee.org/document/1583599},
+  urldate = {2025-10-14},
   keywords = {Computer aided software engineering,Computer Society,dynamic link generation,Feedback,Independent Validation and Verification (IV&V),information retrieval,Information retrieval,Large scale integration,LSI,precision.,Prototypes,recall,Requirements tracing,Risk analysis,Spine,System testing,TF-IDF,Verification and Validation (V&V)}
 }
 
@@ -277,6 +331,20 @@
   keywords = {LLM,Requirements Engineering,Requirements Traceability,Retrieval-Augmented Generation,Traceability Link Recovery}
 }
 
+@inproceedings{holbrook2009AutomatingRequirements,
+  title = {Toward {{Automating Requirements Satisfaction Assessment}}},
+  booktitle = {2009 17th {{IEEE International Requirements Engineering Conference}}},
+  author = {Holbrook, E. Ashlee and Hayes, Jane Huffman and Dekhtyar, Alex},
+  date = {2009-08},
+  pages = {149--158},
+  issn = {2332-6441},
+  doi = {10.1109/RE.2009.10},
+  url = {https://ieeexplore.ieee.org/abstract/document/5328545},
+  urldate = {2025-10-14},
+  eventtitle = {2009 17th {{IEEE International Requirements Engineering Conference}}},
+  keywords = {Algorithm design and analysis,Costs,Defense industry,Design,Design automation,Design engineering,Frequency,Information retrieval,NASA,Natural languages,Requirements,Satisfaction Assessment,Software systems,Traceability}
+}
+
 @software{hulbert2023UsingTreeofThought,
   title = {Using {{Tree-of-Thought Prompting}} to Boost {{ChatGPT}}'s Reasoning},
   author = {Hulbert, Dave},
@@ -285,6 +353,21 @@
   url = {https://github.com/dave1010/tree-of-thought-prompting},
   urldate = {2025-06-02},
   version = {0.1}
+}
+
+@online{jin2025LLMsLLMbased,
+  title = {From {{LLMs}} to {{LLM-based Agents}} for {{Software Engineering}}: {{A Survey}} of {{Current}}, {{Challenges}} and {{Future}}},
+  shorttitle = {From {{LLMs}} to {{LLM-based Agents}} for {{Software Engineering}}},
+  author = {Jin, Haolin and Huang, Linghan and Cai, Haipeng and Yan, Jun and Li, Bo and Chen, Huaming},
+  date = {2025-04-13},
+  eprint = {2408.02479},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2408.02479},
+  url = {http://arxiv.org/abs/2408.02479},
+  urldate = {2025-10-14},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Software Engineering}
 }
 
 @inproceedings{keim2021TraceLink,
@@ -349,6 +432,21 @@
   urldate = {2025-05-20},
   pubstate = {prepublished},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning}
+}
+
+@inproceedings{kong2012ProcessImprovement,
+  title = {Process Improvement for Traceability: {{A}} Study of Human Fallibility},
+  shorttitle = {Process Improvement for Traceability},
+  booktitle = {2012 20th {{IEEE International Requirements Engineering Conference}} ({{RE}})},
+  author = {Kong, Wei-Keat and Hayes, Jane Huffman and Dekhtyar, Alex and Dekhtyar, Olga},
+  date = {2012-09},
+  pages = {31--40},
+  issn = {2332-6441},
+  doi = {10.1109/RE.2012.6345824},
+  url = {https://ieeexplore.ieee.org/abstract/document/6345824},
+  urldate = {2025-10-14},
+  eventtitle = {2012 20th {{IEEE International Requirements Engineering Conference}} ({{RE}})},
+  keywords = {Accuracy,Atmospheric measurements,Educational institutions,Human Factors,Humans,Particle measurements,Performance Measures,Process Improvement,Sensitivity,Software engineering,Traceability,Tracing Strategies}
 }
 
 @online{kuleshov2014AlgorithmsMultiarmed,
@@ -422,6 +520,24 @@
   urldate = {2025-06-14},
   pubstate = {prepublished},
   keywords = {Computer Science - Software Engineering}
+}
+
+@incollection{lin2025ReinforcementLearning,
+  title = {Reinforcement {{Learning}} in {{Large Language Models}} ({{LLMs}}): {{The Rise}} of {{AI Language Giants}}},
+  shorttitle = {Reinforcement {{Learning}} in {{Large Language Models}} ({{LLMs}})},
+  booktitle = {Reinforcement {{Learning Methods}} in {{Speech}} and {{Language Technology}}},
+  author = {Lin, Baihan},
+  editor = {Lin, Baihan},
+  date = {2025},
+  pages = {147--156},
+  publisher = {Springer Nature Switzerland},
+  location = {Cham},
+  doi = {10.1007/978-3-031-53720-2_15},
+  url = {https://doi.org/10.1007/978-3-031-53720-2_15},
+  urldate = {2025-10-14},
+  isbn = {978-3-031-53720-2},
+  langid = {english},
+  keywords = {AI alignment,Constitutional AI,Ethical AI,Healthy AI,Human feedback,Human-in-the-loop learning,Large language models,Reinforcement learning}
 }
 
 @online{LMOpsPrompt_optimization,
@@ -500,6 +616,22 @@
   url = {https://aclanthology.org/2023.emnlp-main.494/},
   urldate = {2025-06-02},
   eventtitle = {{{EMNLP}} 2023}
+}
+
+@incollection{przystalski2025RiseLarge,
+  title = {The {{Rise}} of~the~{{Large Language Models}}},
+  booktitle = {Building {{Personality-Driven Language Models}}: {{How Neurotic}} Is {{ChatGPT}}},
+  author = {Przystalski, Karol and Argasiński, Jan K. and Lipp, Natalia and Pacholczyk, Dawid},
+  editor = {Przystalski, Karol and Argasiński, Jan K. and Lipp, Natalia and Pacholczyk, Dawid},
+  date = {2025},
+  pages = {3--9},
+  publisher = {Springer Nature Switzerland},
+  location = {Cham},
+  doi = {10.1007/978-3-031-80087-0_1},
+  url = {https://doi.org/10.1007/978-3-031-80087-0_1},
+  urldate = {2025-10-14},
+  isbn = {978-3-031-80087-0},
+  langid = {english}
 }
 
 @online{ramnath2025SystematicSurvey,
@@ -734,6 +866,20 @@
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning}
 }
 
+@online{zhang2025EnhancingRequirement,
+  title = {Enhancing {{Requirement Traceability}} through {{Data Augmentation Using Large Language Models}}},
+  author = {Zhang, Jianzhang and Zhou, Jialong and Niu, Nan and Liu, Chuang},
+  date = {2025-09-24},
+  eprint = {2509.20149},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2509.20149},
+  url = {http://arxiv.org/abs/2509.20149},
+  urldate = {2025-10-14},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Software Engineering}
+}
+
 @online{zhou2023LargeLanguage,
   title = {Large {{Language Models Are Human-Level Prompt Engineers}}},
   author = {Zhou, Yongchao and Muresanu, Andrei Ioan and Han, Ziwen and Paster, Keiran and Pitis, Silviu and Chan, Harris and Ba, Jimmy},
@@ -760,4 +906,18 @@
   urldate = {2025-05-20},
   pubstate = {prepublished},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
+@online{zou2025NaturalLanguageProgramming,
+  title = {Natural {{Language-Programming Language Software Traceability Link Recovery Needs More}} than {{Textual Similarity}}},
+  author = {Zou, Zhiyuan and Wang, Bangchao and Liang, Peng and Bi, Tingting and Jin, Huan},
+  date = {2025-09-06},
+  eprint = {2509.05585},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2509.05585},
+  url = {http://arxiv.org/abs/2509.05585},
+  urldate = {2025-10-14},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Software Engineering}
 }
