--- a/thesis.bib
+++ b/thesis.bib
@@ -34,6 +34,14 @@
   langid = {english}
 }
 
+@online{2025Recovery,
+  title = {Recovery},
+  date = {2025-10-08},
+  url = {https://dictionary.cambridge.org/dictionary/english/recovery},
+  urldate = {2025-10-15},
+  langid = {english}
+}
+
 @software{2025StanfordnlpDspy,
   title = {Stanfordnlp/Dspy},
   date = {2025-05-20T08:36:09Z},
@@ -96,6 +104,21 @@
   urldate = {2025-05-20},
   pubstate = {prepublished},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
+@article{cleland-huang2007BestPractices,
+  title = {Best {{Practices}} for {{Automated Traceability}}},
+  author = {Cleland-Huang, Jane and Berenbach, Brian and Clark, Stephen and Settimi, Raffaella and Romanova, Eli},
+  date = {2007-06},
+  journaltitle = {Computer},
+  volume = {40},
+  number = {6},
+  pages = {27--35},
+  issn = {1558-0814},
+  doi = {10.1109/MC.2007.195},
+  url = {https://ieeexplore.ieee.org/document/4249808/},
+  urldate = {2025-10-15},
+  keywords = {automated traceability,Best practices,Capability maturity model,Code standards,Maintenance engineering,Manuals,Software maintenance,Standards development,Standards organizations,System testing,Unified modeling language}
 }
 
 @inproceedings{cleland-huang2018DronologyIncubator,
@@ -210,20 +233,12 @@
   langid = {ngerman}
 }
 
-@article{fuchss2025RetrievalStudy,
-  title = {Beyond {{Retrieval}}: {{A Study}} of {{Using LLM Ensembles}} for {{Candidate Filtering}} in {{Requirements Traceability}}},
-  author = {Fuchß, Dominik and Schwedt, Stefan and Keim, Jan and Hey, Tobias},
-  date = {2025-09-06},
-  doi = {10.5445/IR/1000183058},
-  langid = {english}
-}
-
 @inproceedings{fuchss2025RetrievalStudya,
   title = {Beyond Retrieval: A Study of Using LLM Ensembles for Candidate Filtering in Requirements Traceability},
   shorttitle = {Beyond Retrieval},
   booktitle = {2025 IEEE 33rd International Requirements Engineering Conference Workshops (RE)},
   author = {Fuchß, Dominik and Schwedt, Stefan and Keim, Jan and Hey, Tobias},
-  date = {2025},
+  date = {2025-09-06},
   url = {https://publikationen.bibliothek.kit.edu/1000183058},
   urldate = {2025-10-13},
   eventtitle = {33rd IEEE International Requirements Engineering conference (RE 2025), Valencia, Spanien, 01.09.2025 – 05.09.2025},
@@ -261,7 +276,7 @@
   keywords = {Algorithm design and analysis,Capability maturity model,Computer aided software engineering,Computer science,Horses,Information retrieval,Performance analysis,Signal analysis,Software tools,Sparks}
 }
 
-@article{hayes2006AdvancingCandidatea,
+@article{hayes2006AdvancingCandidate,
   title = {Advancing Candidate Link Generation for Requirements Tracing: The Study of Methods},
   shorttitle = {Advancing Candidate Link Generation for Requirements Tracing},
   author = {Hayes, J.H. and Dekhtyar, A. and Sundaram, S.K.},
@@ -272,8 +287,8 @@
   pages = {4--19},
   issn = {1939-3520},
   doi = {10.1109/TSE.2006.3},
-  url = {https://ieeexplore.ieee.org/document/1583599},
-  urldate = {2025-10-14},
+  url = {https://ieeexplore.ieee.org/abstract/document/1583599},
+  urldate = {2025-05-26},
   keywords = {Computer aided software engineering,Computer Society,dynamic link generation,Feedback,Independent Validation and Verification (IV&V),information retrieval,Information retrieval,Large scale integration,LSI,precision.,Prototypes,recall,Requirements tracing,Risk analysis,Spine,System testing,TF-IDF,Verification and Validation (V&V)}
 }
 
@@ -464,21 +479,6 @@
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning}
 }
 
-@online{kuleshov2014AlgorithmsMultiarmeda,
-  title = {Algorithms for Multi-Armed Bandit Problems},
-  author = {Kuleshov, Volodymyr and Precup, Doina},
-  date = {2014-02-25},
-  eprint = {1402.6028},
-  eprinttype = {arXiv},
-  eprintclass = {cs},
-  doi = {10.48550/arXiv.1402.6028},
-  url = {http://arxiv.org/abs/1402.6028},
-  urldate = {2025-06-12},
-  langid = {english},
-  pubstate = {prepublished},
-  keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning}
-}
-
 @online{lester2021PowerScale,
   title = {The {{Power}} of {{Scale}} for {{Parameter-Efficient Prompt Tuning}}},
   author = {Lester, Brian and Al-Rfou, Rami and Constant, Noah},
@@ -618,22 +618,6 @@
   eventtitle = {{{EMNLP}} 2023}
 }
 
-@incollection{przystalski2025RiseLarge,
-  title = {The {{Rise}} of~the~{{Large Language Models}}},
-  booktitle = {Building {{Personality-Driven Language Models}}: {{How Neurotic}} Is {{ChatGPT}}},
-  author = {Przystalski, Karol and Argasiński, Jan K. and Lipp, Natalia and Pacholczyk, Dawid},
-  editor = {Przystalski, Karol and Argasiński, Jan K. and Lipp, Natalia and Pacholczyk, Dawid},
-  date = {2025},
-  pages = {3--9},
-  publisher = {Springer Nature Switzerland},
-  location = {Cham},
-  doi = {10.1007/978-3-031-80087-0_1},
-  url = {https://doi.org/10.1007/978-3-031-80087-0_1},
-  urldate = {2025-10-14},
-  isbn = {978-3-031-80087-0},
-  langid = {english}
-}
-
 @online{ramnath2025SystematicSurvey,
   title = {A {{Systematic Survey}} of {{Automatic Prompt Optimization Techniques}}},
   author = {Ramnath, Kiran and Zhou, Kang and Guan, Sheng and Mishra, Soumya Smruti and Qi, Xuan and Shen, Zhengyuan and Wang, Shuai and Woo, Sangmin and Jeoung, Sullam and Wang, Yawei and Wang, Haozhu and Ding, Han and Lu, Yuzhe and Xu, Zhichao and Zhou, Yun and Srinivasan, Balasubramaniam and Yan, Qiaojing and Chen, Yueyan and Ding, Haibo and Xu, Panpan and Cheong, Lin Lee},
@@ -663,31 +647,15 @@
   keywords = {automated software traceability,Conferences,large language models,prompt engineering,Requirements engineering,Software}
 }
 
-@inproceedings{rodriguez2023PromptsMattera,
-  title = {Prompts {{Matter}}: {{Insights}} and {{Strategies}} for {{Prompt Engineering}} in {{Automated Software Traceability}}},
-  shorttitle = {Prompts {{Matter}}},
-  booktitle = {2023 {{IEEE}} 31st {{International Requirements Engineering Conference Workshops}} ({{REW}})},
-  author = {Rodriguez, Alberto D. and Dearstyne, Katherine R. and Cleland-Huang, Jane},
-  date = {2023-09},
-  pages = {455--464},
-  issn = {2770-6834},
-  doi = {10.1109/REW57809.2023.00087},
-  url = {https://ieeexplore.ieee.org/document/10260721},
-  urldate = {2025-06-14},
-  eventtitle = {2023 {{IEEE}} 31st {{International Requirements Engineering Conference Workshops}} ({{REW}})},
-  keywords = {automated software traceability,Conferences,large language models,prompt engineering,Requirements engineering,Software}
-}
-
-@software{schwab2025DanielDangoReplicationPackageAutomatedPromptEngineeringforTraceabilityLinkRecoverya,
+@software{schwab2025DanielDangoReplicationPackageAutomatedPromptEngineeringforTraceabilityLinkRecovery,
   title = {{{DanielDango}}/{{Replication-Package-Automated-Prompt-Engineering-for-Traceability-Link-Recovery}}: V0 {{Initialize Repo}}},
   shorttitle = {{{DanielDango}}/{{Replication-Package-Automated-Prompt-Engineering-for-Traceability-Link-Recovery}}},
   author = {Schwab, Daniel},
   date = {2025-10-14},
-  doi = {10.5281/ZENODO.17350134},
-  url = {https://zenodo.org/doi/10.5281/zenodo.17350134},
+  doi = {10.5281/zenodo.17350135},
+  url = {https://zenodo.org/records/17350135},
   urldate = {2025-10-14},
-  organization = {Zenodo},
-  version = {v0}
+  organization = {Zenodo}
 }
 
 @online{shin2020AutoPromptEliciting,
@@ -753,6 +721,20 @@
   urldate = {2025-05-20},
   pubstate = {prepublished},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
+@online{wang2024ImprovingText,
+  title = {Improving {{Text Embeddings}} with {{Large Language Models}}},
+  author = {Wang, Liang and Yang, Nan and Huang, Xiaolong and Yang, Linjun and Majumder, Rangan and Wei, Furu},
+  date = {2024-05-31},
+  eprint = {2401.00368},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2401.00368},
+  url = {http://arxiv.org/abs/2401.00368},
+  urldate = {2025-10-15},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language,Computer Science - Information Retrieval}
 }
 
 @article{weiChainofThoughtPrompting,
@@ -880,6 +862,20 @@
   keywords = {Computer Science - Software Engineering}
 }
 
+@online{zhao2025SurveyLarge,
+  title = {A {{Survey}} of {{Large Language Models}}},
+  author = {Zhao, Wayne Xin and Zhou, Kun and Li, Junyi and Tang, Tianyi and Wang, Xiaolei and Hou, Yupeng and Min, Yingqian and Zhang, Beichen and Zhang, Junjie and Dong, Zican and Du, Yifan and Yang, Chen and Chen, Yushuo and Chen, Zhipeng and Jiang, Jinhao and Ren, Ruiyang and Li, Yifan and Tang, Xinyu and Liu, Zikang and Liu, Peiyu and Nie, Jian-Yun and Wen, Ji-Rong},
+  date = {2025-03-11},
+  eprint = {2303.18223},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2303.18223},
+  url = {http://arxiv.org/abs/2303.18223},
+  urldate = {2025-10-15},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
 @online{zhou2023LargeLanguage,
   title = {Large {{Language Models Are Human-Level Prompt Engineers}}},
   author = {Zhou, Yongchao and Muresanu, Andrei Ioan and Han, Ziwen and Paster, Keiran and Pitis, Silviu and Chan, Harris and Ba, Jimmy},
@@ -906,4 +902,18 @@
   urldate = {2025-05-20},
   pubstate = {prepublished},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
+@online{zou2025NaturalLanguageProgramming,
+  title = {Natural {{Language-Programming Language Software Traceability Link Recovery Needs More}} than {{Textual Similarity}}},
+  author = {Zou, Zhiyuan and Wang, Bangchao and Liang, Peng and Bi, Tingting and Jin, Huan},
+  date = {2025-09-06},
+  eprint = {2509.05585},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2509.05585},
+  url = {http://arxiv.org/abs/2509.05585},
+  urldate = {2025-10-14},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Software Engineering}
 }
