--- a/acronyms.sty
+++ b/acronyms.sty
@@ -117,5 +117,7 @@
 \newcommand{\classifiers}{\classifier's}
 \newcommand{\retrievalstrategy}{\module{Retrieval Strategy}}
 \newcommand{\method}[1]{\texttt{#1}\xspace}
+\newcommand{\io}][0]{input/output\xspace}
+\newcommand\iopairs[0]{\io pairs\xspace}
 
 \newcommand{\omitt}[0]{[...]}
