--- a/sections/foundations.tex
+++ b/sections/foundations.tex
@@ -1,84 +1,112 @@
 \chapter{Foundations}
 \label{ch:foundations}
 
-To understand the application of automated prompt engineering for \TLR, some key concepts are quite important.
-They will be explained in the following subsections.
+To understand the application of automated prompt engineering for \TLR in the \LiSSAF, some key concepts are quite important.
+They are explained in the following sections.
+First an overview of \TLR is given in \autoref{sec:foundations:tlr}.
+Next, the \LiSSAf is introduced in \autoref{sec:foundations:lissa}.
+Finally, \APE is explained in \autoref{sec:foundations:ape}, followed by a more detailed explanation of the \ProTeGi algorithm in \autoref{sec:gradient_descent}.
+The \ProTeGi algorithm is the basis for the most promising implementation of the \APE component in this work.
 
 
 \section{Traceability Link Recovery}
 \label{sec:foundations:tlr}
+
 According to the Cambridge Dictionary, traceability is \directQuote{the ability to find or follow something}{2025Traceability}.
 Meaning, there is evidence of some past occurrence.
-The task of \TLR in software engineering is to find instances of the same element across different software artifacts and link them for further processing.
-\Todo{ggf dann hier auch ne Quelle}
+In software engineering, \TLs are used to link different software artifacts, which are all varying instances of the same element.
 What these elements might look like is visualized in \autoref{fig:artifact_overview}.
+Recovery is defined by the Cambridge Dictionary as \directQuote{the process of getting something back}{2025Recovery}.
+The combination of these two terms, \TLR, is therefore the process of finding and establishing \TLs between existing software artifacts.
+This is necessary as they are often not established or maintained properly~\cite{cleland-huang2007BestPractices}.
 These traceability links help track relationships between, for example, code, requirements, diagrams, documentation, and other elements.
 This information can be used to ensure consistency between different artifacts and versions.
-To find all or most \TLs in a larger project can be quite a time-consuming task if done manually.
 
+Finding all or most \TLs in a larger project can be quite a time-consuming task if done manually.
 This becomes especially apparent when inconsistencies are introduced into the project's artifacts.
-As shown by \citewithauthor{wohlrab2019ImprovingConsistency}, inconsistencies \Todo{ggf dann hier auch die ArDoCo Inconsistency Detection (ID) nennen; die nutzt TLR für ID: https://ardoco.de/approaches/inconsistency-detection/} in wording and language are quite common during different stages of development.
+As shown by \citewithauthor{wohlrab2019ImprovingConsistency}, inconsistencies in wording and language are quite common during different stages of development.
 For example, naming conventions for architectural components might not be followed during implementation.
 They find the impact of these naming inconsistencies to be quite insignificant.
 In this case, typically, there will be different naming conventions on each layer, which are followed correspondingly.
-This might thus not be much of a hurdle when a human is looking for \TLs.
+This might thus not be much of a hurdle when a human is manually determining \TLs.
 However, for automated trace link recovery, this means that simple string comparisons by name are insufficient.
-While \LLMs can overcome these inconsistencies, finding suitable prompts might be challenging or include tedious manual work in prompt engineering.
+On the other hand the absence of \TLs can also be used as an indicator of inconsistencies.
+\citewithauthor{keim2023DetectingInconsistencies} focus on unmentioned model elements and missing model element for software architecture documentation.
+They have shown that these inconsistencies can be detected reasonable with \TLR techniques.
+
 
 \section{Linking Software System Artifacts}
 \label{sec:foundations:lissa}
-\Todo{Möglich hier \acl{LiSSA} zu nutzen ohne das Zitat?}
 
 The \LiSSAf by \citeauthor{fuchss2025LiSSAGeneric} proposes a generic framework for \TLR tasks.
 The framework is organized in a pipeline structure with several different modules used to process \TLs in a modular manner.
-First, the artifacts will be pre-processed into elements.
-This element type is used for all supported domains.
-While the performance of later steps might be diminished or improved with different artifact types, the processing remains the same.
 The current \LiSSA evaluation pipeline first retrieves artifacts from the configured providers for the respective source and target domains.
-They will be preprocessed with the configured preprocessor into elements.
-Importantly they contain the content of the artifact as text, which will be used in later steps.
-Next, embeddings for these elements are created.
-Embeddings are vector representations of the textual content held by the elements.
-\Todo{Source?}
+They will be preprocessed with the configured preprocessor into generalized elements.
+Importantly elements contain the content of the artifact as text, which will be used in later steps.
+Next, embeddings for these elements are created using an embedding model.
+\directQuote{Text embeddings are vector representations of natural language that encode its semantic information}{wang2024ImprovingText}
+By design semantic similar elements will also have similar embeddings.
 Utilizing the elements and their embeddings, \elementstores are initialized.
-They provide functionality to search for similar elements based on their embeddings.
-This \retrievalstrategy can be configured.
+They provide functionality to search for similar elements based for instance on their embedding vectors.
 In the \LiSSA evaluation pipeline, source elements are combined with similar target element candidates in the \classifier module.
 They will be prompted to an \LLM to determine whether a \TL exists between the source element and each candidate.
 This is done using a classification prompt.
 The classification results are then aggregated and post-processed into a set of \TLs.
 
+\begin{prompt}{\KISS by \citewithauthor{ewald2024RetrievalAugmentedLarge} based on \citewithauthor{rodriguez2023PromptsMatter}}{yes_no}
+    \\
+    \input{prompts/original-kiss}
+\end{prompt}
+
+\autoref{prompt:yes_no} shows one of the current default classification prompt used in the \LiSSAf.
+It is a zero-shot prompt based on the \KISS principle.
+This is the base classification prompt which is optimized during the course of this thesis.
+
+
 \section{Automated Prompt Engineering}
 \label{sec:foundations:ape}
+
 Prompt engineering is the process of refining a prompt for a specific use case.
+\Todo{Lass mich raten: Quelle?}
 This is typically done in a non-systematic, manual manner.
 \Acl{APE} enables \LLMs to refine the initial prompt to optimize their performance~\cite{zadenoori2025AutomaticPrompt}.
 Usually, \APE processes are iterated to improve previous results further \citeiterative.
-An illustration of the core concept and how it can be implemented will be shown in \autoref{approach:sec:naive_iterative} and  \autoref{fig:iterative_core_loop}.
-\Todo{Bitte keine vorwärts-referenzen.}
-
-In general, the refinement process will start with some initial prompt.
-It needs to be selected first before any optimization can occur.
-This prompt can be chosen manually.
-This approach is very intuitive.
-However, human interaction is still required to choose this first prompt.
-\citewithauthor{zhou2023LargeLanguage} propose using \LLMs to automate this process and generate the initial prompt.
-They prompt the model to generate a likely set of instructions, also called candidates.
-The instructions will achieve good results when prompted with a batch of input/output pairs.
-These pairs of input/output data will be processed as text by the \LLM, pre- and or post-processing may be required.
-
-\Todo{für die abläufe wären kleine grafiken gut}
-
-The performance of prompts can be estimated using a set of training data, which consists of textual input/output pairs for the \LLM.
+The performance of prompts can be estimated using a set of training data, which consists of textual \iopairs for the \LLM.
 The exact content of these pairs depends on the context of the problem for which the prompts are optimized.
 For example, sentiment analysis training data might provide pairs consisting of sentences and their correctly identified sentiment.
 A prompt performs better the more inputs are correctly mapped onto their expected outputs.
 
+\begin{figure}
+    \centering
+    \includesvg[width=0.7\linewidth]{graphics/Iterative_core_loop}
+    \caption{Visualization of a simple iterative optimization algorithm}
+    \label{fig:iterative_core_loop}
+    \Todo{Legende einfügen; erklären was die Farben bedeuten etc.}
+\end{figure}
+
+As seen in \autoref{fig:iterative_core_loop}, the refinement process will start with some initial prompt.
+It needs to be selected first before any optimization can occur.
+This prompt can be chosen manually, which is the most straightforward approach.
+However, human interaction is still required to choose this first prompt.
+\citewithauthor{zhou2023LargeLanguage} propose using \LLMs to automate this process and generate the initial prompt.
+They prompt the model to generate a likely set of instructions, also called candidates.
+The instructions will achieve good results when prompted with a batch of \iopairs.
+These pairs of \io data will be processed as text by the \LLM, pre- and or post-processing may be required.
+
+\Todo{Prüfen ob die Beschreibung zum aktuellen Bild passt}
+The initial prompt $p_0$can be optimized using an \LLM in the iterative loop illustrated in \autoref{fig:iterative_core_loop}.
+The current prompt $p_i$ will be adjusted to a new prompt $p_{i+1}$ using an optimization prompt.
+The optimization prompt will be prompted to the \LLM together with the current prompt $p_i$.
+The \LLM will then return a new prompt $p_{i+1}$, which is expected to perform better than $p_i$.
+This cycle can be repeated until a fixed number of iterations is reached or the performance of the current prompt $p_i$ exceeds some threshold value.
+The final prompt $p_n$ will then be returned as the output of the \APE algorithm.
+
 While this is a very simple and general attempt to \APE, algorithms can of course be more complex as well.
 
 
-\section{Automatic Prompt Optimization Using Gradient Descent}
+\section{Prompt Optimization with Textual Gradients}
 \label{sec:gradient_descent}
+\Todo{The entire section}
 \citewithauthor{pryzant2023AutomaticPrompt} propose the \ProTeGi algorithm.
 \Todo{2.3 sollte so gebaut werden, dass 2.3.1 und 2.3.2 auch eingeführt werden, also um was es darin geht. 2.3 ist irgenwie teil von 2.2 .. da muss man schauen, wie man das kombinieren / abgrenzen kann.}
 This entire section is based on their work.
