--- a/acronyms.sty
+++ b/acronyms.sty
@@ -108,7 +108,7 @@
 \newcommand{\evaluator}[0]{\module{Evaluator}}
 \newcommand{\promptoptimizer}[0]{\module{Prompt Optimizer}}
 \newcommand{\elementstore}[0]{\module{Element Store}}
-\newcommand{\elementsores}{\elementstore's}
+\newcommand{\elementstores}{\elementstore's}
 \newcommand{\samplingstrategy}[0]{\module{Sample Strategy}}
 \newcommand{\reductor}[0]{\module{Reductor}}
 \newcommand{\cache}[0]{\module{Cache}}
@@ -117,7 +117,7 @@
 \newcommand{\classifiers}{\classifier's}
 \newcommand{\retrievalstrategy}{\module{Retrieval Strategy}}
 \newcommand{\method}[1]{\texttt{#1}\xspace}
-\newcommand{\io}][0]{input/output\xspace}
+\newcommand{\io}[0]{input/output\xspace}
 \newcommand\iopairs[0]{\io pairs\xspace}
 
 \newcommand{\omitt}[0]{[...]}
