--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -39,6 +39,12 @@
 \section{Prompts}
 \label{sec:appendix:prompts}
 
+\begin{prompt}{Original \Acl{CoT}}{cot}
+    \Todo{Who wrote this prompt?}
+    \\
+    \input{prompts/original-chain-of-thought}
+\end{prompt}
+
 \begin{prompt}{Opimized WARC prompt \feedl = 3, \iterl = 5}{warc_zandoori_optimized}
     \\
     \input{prompts/ZadenooriOptimizationPrompt/results-prompt-optimizationWARC_feedback_gpt_gpt-4o-2024-08-06_0_mi5_fs3.json_9a0778aa-c47f-353e-865c-e3e18cb7417d}
