--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -29,7 +29,8 @@ The prompts by \citewithauthor{hulbert2023UsingTreeofThought} aim to simplify \T
 I will use one of their prompts.
 The benchmark data to compare \ToT prompting with the existing zero-shot and \CoT classifiers also exists in public repositories~\cite{fuchss2022ArDoCoBenchmark, hey2025ReplicationPackage}.
 
-The \LiSSAf is publicly accessible in a repository using the MIT license. Various classifiers are already included there.
+The \LiSSAf is publicly accessible in a repository using the MIT license.
+Various classifiers are already included there.
 They can be used as an inspiration for development.
 The class \verb|classifier| is an abstraction of all classifiers.
 It provides basic functionality to include further classifiers.
