--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -392,6 +392,7 @@ Thus the \APE algorithm was still able to alter the optimized output prompt furt
 \end{table}
 
 \begin{prompt}{Opimized WARC prompt \iterl = 3}{warc_gradient_optimized}
+    \label{prompt:optimized_classificiation_prompt}
     \\
     \input{prompts/GradientOptimizationPryzant/results-prompt-optimizationWARC_gradient_gpt-4o-mini-2024-07-18_mi3.json_f3901225-31d7-36d5-86ee-d400c573de1a}
 \end{prompt}
