--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -65,9 +65,9 @@ The refined prompt can improve \TLR rates, for projects in the \RtR domain, comp
 
 This thesis aims to answer the following research questions:
 \begin{itemize}
-    \item[RQ1:] Can \APE be used to improve \TLR performance in the \LiSSAf?
-    \item[RQ2:] How does the performance of optimized prompts compare to the current \TLR performance in the \RtR domain?
-    \item[RQ3:] Can optimized prompts improve \TLR performance for untrained datasets?
+    \item[\textbf{RQ1:}] Can \APE be used to improve \TLR performance in the \LiSSAf?
+    \item[\textbf{RQ2:}] How does the performance of optimized prompts compare to the current \TLR performance in the \RtR domain?
+    \item[\textbf{RQ3:}] Can optimized prompts improve \TLR performance for untrained datasets?
 \end{itemize}
 
 The remainder of my work is structured as follows:
