--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -1,6 +1,6 @@
 \chapter{Related Work}
 \label{ch:related_work}
-\Acl{TLR} through large language models is an active field of work to apply rapid advancements in \LLM performance.
+\Acl{TLR} through \LLMs is an active field of work to apply rapid advancements in \LLM performance.
 This work rests at the intersection of two different fields of study.
 On the one hand side the field of \TLR does not always rely on \LLMs as shown in \autoref{related:sec:tlr}.
 On the other hand, \APE has a much broader application and research than simply being focused on \TLR as expanded in \autoref{related:sec:ape}.
@@ -8,7 +8,6 @@ On the other hand, \APE has a much broader application and research than simply 
 
 \section{Traceability Link Recovery}
 \label{related:sec:tlr}
-%Maybe acro can be used here instead?
 
 Before the emergence of \LLMs \IR methods were used to recover \TLs.
 \citewithauthor{delucia2012InformationRetrieval} have provided an overview about different \IR methods and their performance. 
@@ -71,8 +70,8 @@ Software architecture documentation to software architecture models for BigBlueB
 
 For the domain of requirements to requirements, which my work will also focus on, a compilation of training data can be found in the replication package~\cite{hey2025ReplicationPackage} for recent work of \citeauthor{hey2025RequirementsTraceability}.
 
-CM1-Nasa \cite{hayes2006AdvancingCandidatea}
-Dronology \cite{cleland-huang2018DronologyIncubator}
-GANNT \cite{holbrook2009AutomatingRequirements}
-Modis \cite{hayes2003ImprovingRequirements}
-WARC \cite{kong2012ProcessImprovement}
+    \CMOneNASA\cite{hayes2006AdvancingCandidate}
+    \Dronology\cite{cleland-huang2018DronologyIncubator}
+    \GANNT\cite{holbrook2009AutomatingRequirements}
+    \ModisDataset\cite{hayes2003ImprovingRequirements}
+    \WARC\cite{kong2012ProcessImprovement}
