Update on Overleaf.

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -108,7 +108,7 @@
 \newcommand{\evaluator}[0]{\module{Evaluator}\xspace}
 \newcommand{\promptoptimizer}[0]{\module{Prompt Optimizer}\xspace}
 \newcommand{\elementstore}[0]{\module{Element Store}\xspace}
-\newcommand{\elementsores}{\elementstore's\xspace}
+\newcommand{\elementstores}{\elementstore's\xspace}
 \newcommand{\samplingstrategy}[0]{\module{Sample Strategy}\xspace}
 \newcommand{\reductor}[0]{\module{Reductor}\xspace}
 \newcommand{\cache}[0]{\module{Cache}\xspace}
@@ -119,6 +119,6 @@
 \newcommand{\method}[1]{\texttt{#1}\xspace}
 \newcommand{\io}[0]{input/output\xspace}
 \newcommand\iopairs[0]{\io pairs\xspace}
-\newcommand{\replicationPackage}[0]{replication-package~\cite{schwab2025DanielDangoReplicationPackageAutomatedPromptEngineeringforTraceabilityLinkRecovery}\xspace}
+\newcommand{\replicationPackage}[0]{replication package~\cite{schwab2025DanielDangoReplicationPackageAutomatedPromptEngineeringforTraceabilityLinkRecovery}\xspace}
 
 \newcommand{\omitt}[0]{[...]}
